Add new search & filters to user lists

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -192,10 +192,10 @@
                     Added React single-pager apps for <a href="/single/users/" class="govuk-link">User list/Single user view/Email search results</a> and <a href="/single/orgs/" class="govuk-link">organisations list</a> researching. Added due to complexity required in user research testing scenarios, and lack of flexibility for this in prototype kit.
                 </li>
                 <li>
-                    Added revised user list filter controls
+                    Added revised user list <a href="/v7/l2/users/view/all">filter controls</a>
                 </li>
                 <li>
-                    Added a basic search - search by complete email address
+                    Added a <a href="/v7/l2/users/view/all">basic search</a> - search by complete email address
                 </li>
             </ul>
 
@@ -214,7 +214,7 @@
 
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/add-service/start">Add your service</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/add-service/start">Add your service</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
@@ -222,127 +222,133 @@
 
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/email">Register email</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/register/email">Register email</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Design iterated following research, needs validating</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/password">Create new password</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/register/password">Create new password</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Design iterated following research, needs validating</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/mobile">Mobile 2FA</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/register/mobile">Mobile 2FA</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Design iterated following research, needs validating</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/app-check">App or text message question</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/register/app-check">App or text message question</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Concerns that content is leading, needs review</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/qr">Authenticator app setup</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/register/qr">Authenticator app setup</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Journey not explored</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/email">Sign in email</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/email">Sign in email</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Design iterated following research, needs validating</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/signin">Sign in</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/signin">Sign in</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Tested well with 10 users</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/reset-password/start">Password reset</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/reset-password/start">Password reset</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Journey not explored</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/dashboard">Service admin dashboard</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/dashboard">Service admin dashboard</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Tested well with all users</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/orgs/view/all">Organisation list</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/orgs/view/all">Organisation list</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Initially tested well, full user need not yet understood</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/orgs/add/start">Add a new organisation</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/orgs/add/start">Add a new organisation</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Business requirements needed</td>
                     </tr>
 
                      <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/orgs/view/capita">Organisation details</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/orgs/view/capita">Organisation details</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/orgs/view/capita">Delete organisation</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/orgs/view/capita">Delete organisation</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/view/all">User list</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/view/all">User list</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Initially tested well, full user need not yet understoods</td>
-
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/add/start">Add a new user</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/view/all">Search for a user by email address</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/add/start">Add a new user</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Users have been able to complete task but multiple ways to do this and not all journeys explored</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/view/single">User details</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/view/single">User details</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
                     </tr>
 
                      <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/view/single">Delete user</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/view/single">Delete user</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l3/dashboard">Organisation admin dashboard</a></td>
+                        <td class="govuk-table__cell"><a href="/v7/l3/dashboard">Organisation admin dashboard</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Tested well with one user so far</td>
