Added search results pages

--- a/app/views/v7/l2/users/view/includes/user-view-table-head.html
+++ b/app/views/v7/l2/users/view/includes/user-view-table-head.html
@@ -6,13 +6,13 @@
             </a>
         </th>
 
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">
+        <th scope="col" class="govuk-table__header">
             <a href="sorted/all-by-org" class="govuk-link">
                 Organisation <span class="govuk-sorted-by govuk-sorted-by--unsorted">(Not currently sorted)</span>
             </a>
         </th>
 
-        <th scope="col" class="govuk-table__header">
+        <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">
             <a href="sorted/all-by-status" class="govuk-link">
                 Status <span class="govuk-sorted-by govuk-sorted-by--unsorted">(Not currently sorted)</span>
             </a>
