--- a/app/views/v7/l2/users/view/includes/user-view-heading-add-search.html
+++ b/app/views/v7/l2/users/view/includes/user-view-heading-add-search.html
@@ -15,12 +15,16 @@
                     <span id="user-search-hint" class="govuk-hint">
                         Enter the user's full email address
                     </span>
+                    <form action="/v7/l2/users/search/search-results-none" method="post" class="form">
+                        <input class="govuk-input" id="user-search" name="user-search" type="text" aria-describedby="user-search-hint" spellcheck="false">
 
-                    <input class="govuk-input" id="user-search" name="user-search" type="text" aria-describedby="user-search-hint" spellcheck="false">
-
-                    <button class="search-button" data-module="govuk-button">
-                        Search
-                    </button>
+                        <button class="search-button" data-module="govuk-button">
+                            Search
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
+
+
+
