Adding search and search resutls to l2 and l3

--- a/app/views/v7/l2/users/search/search-results-success-hs.html
+++ b/app/views/v7/l2/users/search/search-results-success-hs.html
@@ -25,7 +25,7 @@
         <div class="govuk-grid-row govuk-!-margin-bottom-6">
             <div class="govuk-grid-column-one-half">
                 <div class="user-search-box">
-                    <form action="/search/search-results-none" method="post" class="form">
+                    <form action="search-results-none" method="post" class="form">
                         <input class="govuk-input" id="user-search" value="{{ data['user-search'] }}" name="user-search" type="text" aria-describedby="user-search-hint" spellcheck="false">
 
                         <button class="search-button" data-module="govuk-button">
@@ -58,7 +58,7 @@
                     <tbody class="govuk-table__body">
                             <tr class="govuk-table__row">
                                 <th scope="row" class="govuk-table__header">
-                                    <a href="../view/single" class="govuk-link">
+                                    <a href="../view/single-hs" class="govuk-link">
                                         Harpal Singh
                                     </a>
                                 </th>
@@ -68,7 +68,7 @@
                                 </td>
 
                                 <td class="govuk-table__cell">
-                                    Invite expired
+                                    Access expired
                                 </td>
                             </tr>
                     </tbody>
