--- a/app/views/v7/l2/users/search/search-results-success-jb.html
+++ b/app/views/v7/l2/users/search/search-results-success-jb.html
@@ -58,7 +58,7 @@
                     <tbody class="govuk-table__body">
                             <tr class="govuk-table__row">
                                 <th scope="row" class="govuk-table__header">
-                                    <a href="../view/single" class="govuk-link">
+                                    <a href="../view/single-jb" class="govuk-link">
                                         Jacob Burns
                                     </a>
                                 </th>
