--- a/app/views/v7/l2/users/search/search-results-none.html
+++ b/app/views/v7/l2/users/search/search-results-none.html
@@ -38,7 +38,7 @@
         <div class="govuk-grid-row govuk-!-margin-bottom-6">
             <div class="govuk-grid-column-one-half">
                 <div class="user-search-box">
-                    <form action="search-results-none" method="post" class="form">
+                    <form action="/v7/l2/users/search/search-results-none" method="post" class="form">
                         <input class="govuk-input" value="{{ data['user-search'] }}" id="user-search" name="user-search" type="text" aria-describedby="user-search-hint" spellcheck="false">
 
                         <button class="search-button" data-module="govuk-button">
