--- a/app/views/v7/l2/users/view/sorted/all-by-status-reverse.html
+++ b/app/views/v7/l2/users/view/sorted/all-by-status-reverse.html
@@ -11,13 +11,10 @@
 
 {% block content %}
     <div class="govuk-width-container">
-        <h1 class="govuk-heading-l listing-page">Users</h1>
 
-        <a href="../add/start" class="govuk-button listing-page">
-            Add a user
-        </a>
-
-        {% include "../includes/sorting-filtering.html" %}
+        {% include "../includes/user-view-heading-add-search.html" %}
+        
+        {% include "../includes/user-view-filters.html" %}
 
         <table class="govuk-table">
             <thead class="govuk-table__head">
@@ -28,13 +25,13 @@
                         </a>
                     </th>
 
-                    <th scope="col" class="govuk-table__header govuk-!-width-one-third">
+                    <th scope="col" class="govuk-table__header">
                         <a href="all-by-org" class="govuk-link">
                             Organisation <span class="govuk-sorted-by govuk-sorted-by--unsorted">(Not currently sorted)</span>
                         </a>
                     </th>
 
-                    <th scope="col" class="govuk-table__header">
+                    <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">
                         <a href="all-by-status" class="govuk-link">
                             Status <span class="govuk-sorted-by govuk-sorted-by--reverse">(Currently sorted by invite expired - invite sent - access expired - active)</span>
                         </a>
