Content updates to delete user

--- a/app/views/v7/l2/users/edit/delete-check.html
+++ b/app/views/v7/l2/users/edit/delete-check.html
@@ -23,6 +23,9 @@
                             classes: "govuk-fieldset__legend--l"
                         }
                     },
+                    hint: {
+                        text: "They will lose their access to " + data['prototype-service'] + " if you delete them."
+                    },
                     items: [
                         {
                             value: "yes",
