--- a/app/views/v7/l2/users/view/remploy-2.html
+++ b/app/views/v7/l2/users/view/remploy-2.html
@@ -37,9 +37,21 @@
     <table class="govuk-table">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name <span class="govuk-sorted-by">(Currently sorted by name, a-z)</span></th>
-                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
-                <th scope="col" class="govuk-table__header">Status</th>
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">
+                    <button type="button" class="sort-header-toggle sorted-ascending">
+                        Name
+                    </button>
+                </th>
+                <th scope="col" class="govuk-table__header">
+                    <button type="button" class="sort-header-toggle ">
+                        Email address
+                    </button>
+                </th>
+                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">
+                    <button type="button" class="sort-header-toggle ">
+                        Status
+                    </button>
+                </th>
             </tr>
         </thead>
 
