--- a/app/views/v7/l2/users/view/all.html
+++ b/app/views/v7/l2/users/view/all.html
@@ -17,7 +17,30 @@
         {% include "./includes/user-view-filters.html" %}
 
         <table class="govuk-table">
-            {% include "./includes/user-view-table-head.html" %}
+            
+            
+            <thead class="govuk-table__head">
+                <tr class="govuk-table__row">
+                    <th scope="col" class="govuk-table__header govuk-!-width-one-third">
+                        <button type="button" class="sort-header-toggle sorted-descending" onclick="window.location.href='sorted/all-by-name-reverse'">
+                            Name
+                        </button>
+                    </th>
+                    <th scope="col" class="govuk-table__header">
+                        <button type="button" class="sort-header-toggle" onclick="window.location.href='sorted/all-by-org'">
+                            Organisation
+                        </button>
+                    </th>
+                    <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">
+                        <button type="button" class="sort-header-toggle" onclick="window.location.href='sorted/all-by-status'">
+                            Status
+                        </button>
+                    </th>
+                </tr>
+            </thead>
+
+
+
 
             <tbody class="govuk-table__body">
                 {% if data["user-first-name"] and data["user-last-name"] %}
