--- a/app/views/v7/l2/users/view/sorted/all-by-status-reverse.html
+++ b/app/views/v7/l2/users/view/sorted/all-by-status-reverse.html
@@ -17,24 +17,23 @@
         {% include "../includes/user-view-filters.html" %}
 
         <table class="govuk-table">
+           
             <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
                     <th scope="col" class="govuk-table__header govuk-!-width-one-third">
-                        <a href="../all" class="govuk-link">
-                            Name <span class="govuk-sorted-by govuk-sorted-by--unsorted">(Not currently sorted)</span>
-                        </a>
+                        <button type="button" class="sort-header-toggle" onclick="window.location.href='../all'">
+                            Name
+                        </button>
                     </th>
-
                     <th scope="col" class="govuk-table__header">
-                        <a href="all-by-org" class="govuk-link">
-                            Organisation <span class="govuk-sorted-by govuk-sorted-by--unsorted">(Not currently sorted)</span>
-                        </a>
+                        <button type="button" class="sort-header-toggle" onclick="window.location.href='all-by-org'">
+                            Organisation
+                        </button>
                     </th>
-
                     <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">
-                        <a href="all-by-status" class="govuk-link">
-                            Status <span class="govuk-sorted-by govuk-sorted-by--reverse">(Currently sorted by invite expired - invite sent - access expired - active)</span>
-                        </a>
+                        <button type="button" class="sort-header-toggle sorted-ascending" onclick="window.location.href='all-by-status'">
+                            Status
+                        </button>
                     </th>
                 </tr>
             </thead>
