Content update to L2 & L3 register start

--- a/app/views/v7/l3/users/register/start.html
+++ b/app/views/v7/l3/users/register/start.html
@@ -26,8 +26,10 @@
             <h1 class="govuk-heading-l">Register with DWP Authenticate</h1>
 
             <p>
-                Registering your account with DWP Authenticate will let you access the {{ data['prototype-service'] }} service.
+                Registering your account with DWP Authenticate will let you have access as an admin for {{ data['prototype-organisation'] }}.
             </p>
+
+
 
             {{ govukButton({
                 text: "Start registration",
