--- a/app/views/v7/l2/users/register/start.html
+++ b/app/views/v7/l2/users/register/start.html
@@ -25,7 +25,8 @@
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">Register with DWP Authenticate</h1>
 
-            <p>Registering your account with DWP Authenticate will let you access the {{ data['prototype-service'] }} service.</p>
+            <p>Registering your account with DWP Authenticate will let you have access as an admin for {{ data['prototype-service'] }} service.</p>
+
 
             {{ govukButton({
                 text: "Start registration",
