--- a/app/views/v7/l4/users/register/password.html
+++ b/app/views/v7/l4/users/register/password.html
@@ -28,7 +28,7 @@
             <form id="tpas_password_form" method="post" class="form" action="register-branch">
                 <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint passport-issued-error">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                        <h1 class="govuk-fieldset__heading">Create a new password</h1>
+                        <h1 class="govuk-fieldset__heading">Create a password</h1>
                     </legend>
 
                     <p>Your password must be 8 characters or more.</p>
