--- a/app/views/v7/l4/users/reset-password/text-code.html
+++ b/app/views/v7/l4/users/reset-password/text-code.html
@@ -29,7 +29,7 @@
 
             {{ govukDetails({
                 summaryText: "I do not have access to this phone",
-                text: "Email service support team, if you need the code sent to a new number."
+                html: 'Email <a href="mailto:support@support.com">service support team</a>, if you need the code sent to a new number.'
             }) }}
 
             <div class="govuk-form-group govuk-!-margin-top-6">
