Content update to manage org radios

--- a/app/views/v7/l2/orgs/view/capita.html
+++ b/app/views/v7/l2/orgs/view/capita.html
@@ -152,7 +152,7 @@
                         },
                         {
                             value: "delete",
-                            text: "De-activate Capita"
+                            text: "Remove Capita"
                         }
                     ]
                 }) }}
