--- a/app/views/v7/l2/orgs/view/custom.html
+++ b/app/views/v7/l2/orgs/view/custom.html
@@ -176,7 +176,7 @@
                         },
                         {
                             value: "delete",
-                            text: "De-activate organisation"
+                            text: "Remove organisation"
                         }
                     ]
                 }) }}
