--- a/app/views/v7/l2/orgs/view/dwp.html
+++ b/app/views/v7/l2/orgs/view/dwp.html
@@ -152,7 +152,7 @@
                         },
                         {
                             value: "delete",
-                            text: "De-activate DWP"
+                            text: "Remove DWP"
                         }
                     ]
                 }) }}
