--- a/app/views/v7/l2/orgs/view/croydon.html
+++ b/app/views/v7/l2/orgs/view/croydon.html
@@ -153,7 +153,7 @@
                         },
                         {
                             value: "delete",
-                            text: "De-activate London Borough of Croydon Council"
+                            text: "Remove London Borough of Croydon Council"
                         }
                     ]
                 }) }}
