--- a/app/views/v7/l2/orgs/view/g4s.html
+++ b/app/views/v7/l2/orgs/view/g4s.html
@@ -153,7 +153,7 @@
                         },
                         {
                             value: "delete",
-                            text: "De-activate G4S"
+                            text: "Remove G4S"
                         }
                     ]
                 }) }}
