--- a/app/views/v7/l2/orgs/view/remploy.html
+++ b/app/views/v7/l2/orgs/view/remploy.html
@@ -152,7 +152,7 @@
                         },
                         {
                             value: "delete",
-                            text: "De-activate Remploy"
+                            text: "Remove Remploy"
                         }
                     ]
                 }) }}
