--- a/app/views/v7/l2/orgs/view/serco.html
+++ b/app/views/v7/l2/orgs/view/serco.html
@@ -153,7 +153,7 @@
                         },
                         {
                             value: "delete",
-                            text: "De-activate Serco"
+                            text: "Remove Serco"
                         }
                     ]
                 }) }}
