Content update to reinvite confirmation

--- a/app/views/v7/l3/users/edit/reinvite.html
+++ b/app/views/v7/l3/users/edit/reinvite.html
@@ -15,8 +15,9 @@
                 titleText: "Invitation re-sent"
             }) }}
 
-            <p>An invitation has been resent to {{data['user-email-address']}}</p>
+            <p>An invitation has been re-sent to {{data['user-email-address']}}</p>
             <p><a href="../../dashboard" class="govuk-link">Back to dashboard</a></p>
         </div>
     </div>
 {% endblock %}
+
