Update to sort table head include

--- a/app/views/v7/l2/users/view/includes/user-view-table-head.html
+++ b/app/views/v7/l2/users/view/includes/user-view-table-head.html
@@ -1,21 +1,21 @@
-<thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">
-            <a href="sorted/all-by-name-reverse" class="govuk-link">
-                Name <span class="govuk-sorted-by">(Currently sorted by name, a-z)</span>
-            </a>
-        </th>
 
-        <th scope="col" class="govuk-table__header">
-            <a href="sorted/all-by-org" class="govuk-link">
-                Organisation <span class="govuk-sorted-by govuk-sorted-by--unsorted">(Not currently sorted)</span>
-            </a>
-        </th>
 
-        <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">
-            <a href="sorted/all-by-status" class="govuk-link">
-                Status <span class="govuk-sorted-by govuk-sorted-by--unsorted">(Not currently sorted)</span>
-            </a>
-        </th>
-    </tr>
-</thead>
+ <thead class="govuk-table__head">
+                <tr class="govuk-table__row">
+                    <th scope="col" class="govuk-table__header govuk-!-width-one-third">
+                        <button type="button" class="sort-header-toggle sorted-descending" onclick="window.location.href='sorted/all-by-name-reverse'">
+                            Name
+                        </button>
+                    </th>
+                    <th scope="col" class="govuk-table__header">
+                        <button type="button" class="sort-header-toggle" onclick="window.location.href='sorted/all-by-org'">
+                            Organisation
+                        </button>
+                    </th>
+                    <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">
+                        <button type="button" class="sort-header-toggle" onclick="window.location.href='sorted/all-by-status'">
+                            Status
+                        </button>
+                    </th>
+                </tr>
+            </thead>
