--- a/app/views/index.html
+++ b/app/views/index.html
@@ -94,6 +94,13 @@
                                         }
                                     },
                                     {
+                                        value: "People Plus",
+                                        text: "People Plus",
+                                        attributes: {
+                                            "data-machine": "peopleplus.co.uk"
+                                        }
+                                    },
+                                    {
                                         value: "London Borough of Croydon Council",
                                         text: "London Borough of Croydon Council",
                                         attributes: {
