Content update to l3 register confirmation

--- a/app/views/v7/l3/users/register/complete.html
+++ b/app/views/v7/l3/users/register/complete.html
@@ -23,7 +23,7 @@
 {% block content %}
 
     {% set panelContent %}
-        Admin for {{ data["prototype-service"] }} 
+        Admin for {{ data['prototype-organisation'] }} 
     {% endset %}
 
     <div class="govuk-grid-row">
