--- a/app/views/v7/l2/users/view/all.html
+++ b/app/views/v7/l2/users/view/all.html
@@ -62,6 +62,24 @@
                 {% endif %}
 
                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Abby Hammond</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Abigail Clancy</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Adam McCluskey</a></th>
+                    <td class="govuk-table__cell">G4S</td>
+                    <td class="govuk-table__cell">Invite sent</td>
+                </tr>
+
+                <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Allan Clarke</a></th>
                     <td class="govuk-table__cell">Serco</td>
                     <td class="govuk-table__cell">Active</td>
@@ -91,6 +109,14 @@
                     <td class="govuk-table__cell">Active</td>
                 </tr>
 
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Andrew Weatherall</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Invite sent</td>
+                </tr>
+
+
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Andy Radrizzani</a></th>
                     <td class="govuk-table__cell">London Borough of Croydon Council</td>
@@ -104,9 +130,30 @@
                 </tr>
 
                 <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bill Fotherby</a></th>
-                    <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bella White</a></th>
+                    <td class="govuk-table__cell">Serco</td>
                     <td class="govuk-table__cell">Active</td>
+                </tr>
+
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ben Jarvis</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ben Smith</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ben Jones</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Invite sent</td>
                 </tr>
 
                 <tr class="govuk-table__row">
@@ -117,6 +164,24 @@
 
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bob Nudd</a></th>
+                    <td class="govuk-table__cell">G4S</td>
+                    <td class="govuk-table__cell ">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Brenda Charles</a></th>
+                    <td class="govuk-table__cell">G4S</td>
+                    <td class="govuk-table__cell ">Active</td>
+                </tr>
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Brian Smith</a></th>
+                    <td class="govuk-table__cell">Serco</td>
+                    <td class="govuk-table__cell ">Active</td>
+                </tr>
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bruce Sanders</a></th>
                     <td class="govuk-table__cell">G4S</td>
                     <td class="govuk-table__cell ">Active</td>
                 </tr>
