--- a/app/views/v7/l3/users/view/single-jb.html
+++ b/app/views/v7/l3/users/view/single-jb.html
@@ -50,7 +50,7 @@
                             text: "Email address"
                         },
                         value: {
-                            text: "jacob.burns@capita.co.uk"
+                            text: "jacob.burns@peopleplus.co.uk"
                         }
                     },
                     {
@@ -58,7 +58,7 @@
                             text: "Organisation"
                         },
                         value: {
-                            text: "Capita"
+                            text: "PeoplePlus"
                         }
                     },
                     {
