--- a/app/views/v7/l3/users/search/search-results-success-hs.html
+++ b/app/views/v7/l3/users/search/search-results-success-hs.html
@@ -64,7 +64,7 @@
                                 </th>
 
                                 <td class="govuk-table__cell">
-                                    Remploy
+                                    PeoplePlus
                                 </td>
 
                                 <td class="govuk-table__cell">
