--- a/app/views/v7/l3/users/view/single-hs.html
+++ b/app/views/v7/l3/users/view/single-hs.html
@@ -50,7 +50,7 @@
                             text: "Email address"
                         },
                         value: {
-                            text: "harpal.singh@remploy.co.uk"
+                            text: "harpal.singh@peopleplus.co.uk"
                         }
                     },
                     {
@@ -58,7 +58,7 @@
                             text: "Organisation"
                         },
                         value: {
-                            text: "Remploy"
+                            text: "PeoplePlus"
                         }
                     },
                     {
