--- a/app/views/v7/l3/users/view/all-2.html
+++ b/app/views/v7/l3/users/view/all-2.html
@@ -36,6 +36,18 @@
             </tr>
         </thead>
 
+         <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Lee Chapman</a></th>
+                <td class="govuk-table__cell">lee.chapman@{{ data['prototype-organisation-machine'] }}</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
+                <td class="govuk-table__cell">mel.sterland@{{ data['prototype-organisation-machine'] }}</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
         <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Rod Wallace</a></th>
@@ -59,7 +71,7 @@
 
     <nav role="navigation" aria-label="Pagination">
         <div class="pagination__summary">
-            Showing 10 &ndash; 13 of 13 users
+            Showing 10 &ndash; 13 of 15 users
         </div>
 
         <ul class="pagination">
