Enlarged user list view from 10 to 20

--- a/app/views/v7/l3/users/view/all.html
+++ b/app/views/v7/l3/users/view/all.html
@@ -86,13 +86,13 @@
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Harpal Singh</a></th>
+                <th scope="row" class="govuk-table__header"><a href="single-hs" class="govuk-link">Harpal Singh</a></th>
                 <td class="govuk-table__cell">harpal.singh@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell ">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jacob Burns</a></th>
+                <th scope="row" class="govuk-table__header"><a href="single-jb" class="govuk-link">Jacob Burns</a></th>
                 <td class="govuk-table__cell">jacob.burns@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell ">Active</td>
             </tr>
