--- a/app/views/v7/l2/users/view/sorted/all-by-name-reverse.html
+++ b/app/views/v7/l2/users/view/sorted/all-by-name-reverse.html
@@ -48,11 +48,24 @@
                     <td class="govuk-table__cell">Active</td>
                 </tr>
 
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Victoria Barnes</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Vicky Coldwell</a></th>
+                    <td class="govuk-table__cell">Serco</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Trevor Birch</a></th>
                     <td class="govuk-table__cell">London Borough of Croydon Council</td>
                     <td class="govuk-table__cell">Active</td>
                 </tr>
+
 
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Yeboah</a></th>
@@ -66,10 +79,37 @@
                     <td class="govuk-table__cell">Active</td>
                 </tr>
 
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tommy Richmond</a></th>
+                    <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tom Burton</a></th>
+                    <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tina Windass</a></th>
+                    <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Steve Hodge</a></th>
                     <td class="govuk-table__cell">Capita</td>
                     <td class="govuk-table__cell ">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Sarah Betts</a></th>
+                    <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                    <td class="govuk-table__cell">Active</td>
                 </tr>
 
                 <tr class="govuk-table__row">
@@ -85,19 +125,45 @@
                 </tr>
 
                 <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Molenaar</a></th>
-                    <td class="govuk-table__cell">Remploy</td>
-                    <td class="govuk-table__cell">Active</td>
-                </tr>
-
-                <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robson Green</a></th>
                     <td class="govuk-table__cell">G4S</td>
                     <td class="govuk-table__cell">Active</td>
                 </tr>
 
                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Molenaar</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+            
+
+                <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Church</a></th>
+                    <td class="govuk-table__cell">G4S</td>
+                    <td class="govuk-table__cell ">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Bates</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Randy Leeming</a></th>
+                    <td class="govuk-table__cell">G4S</td>
+                    <td class="govuk-table__cell ">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Raina Ladd</a></th>
+                    <td class="govuk-table__cell">G4S</td>
+                    <td class="govuk-table__cell ">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Rachel Kettlewell</a></th>
                     <td class="govuk-table__cell">G4S</td>
                     <td class="govuk-table__cell ">Active</td>
                 </tr>
@@ -106,7 +172,7 @@
 
         <nav role="navigation" aria-label="Pagination">
             <div class="pagination__summary">
-                Showing 1 &ndash; 10 of 74 users
+                Showing 1 &ndash; 20 of 74 users
             </div>
 
             <ul class="pagination">
