--- a/app/views/v7/l4/users/reset-password/text-code.html
+++ b/app/views/v7/l4/users/reset-password/text-code.html
@@ -23,7 +23,7 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l">We have sent you a code</h1>
+            <h1 class="govuk-heading-l">We have sent you a text message with a code</h1>
             <p>It should arrive in a few minutes.</p>
             <p>We sent it to a number ending 1234.</p>
 
